# kattis

./: shadesofpink.hi
cpp/: 10kindsofpeople.cpp  10kindsofpeople1.cpp  2048.cpp  UnionFindTest.py  a.cpp  a.out  abandonedanimals.cpp  addingwords.cpp  airconditionedminions.cpp  allpairspath.cpp  alphabetanimals.cpp  anagramcounting.cpp  astro  astro.cpp  bank.cpp  bing.cpp  bokforing.cpp  brexit.cpp  bumped.cpp  c.cpp  classy.cpp  closestpair.cpp  closestpair1.cpp  communication.cpp  conversationlog.cpp  dansmatta.cpp  dansmatta.py  dartscore.cpp  different.cpp  doctorkattis  doctorkattis.cpp  echoechoecho.cpp  esej.cpp  espresso.cpp  fallingapart.cpp  finalexam2.cpp  flyingsafely.cpp  forcedchoice.cpp  fulltank.cpp  guess.cpp  (+47 more)
haskell/: CHANGELOG.md  haskell.cabal
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/src/: aboveaverage.hs  airconditionedminions.hs  alphabetspam.hs  anagramcounting.hs  annoyedcoworkers.hs  apixans.hs  babelfish.hs  busnumbers.hs  carousel.hs  coldputerscience.hs  conundrum.hs  conversationlog.hs  furiouscocktail.hs  gcvwr.hs  grandpabernie.hs  hardwoodspecies.hs  haughtycuisine.hs  homework.hs  hopscotch.hs  jumbojavelin.hs  knotknowledge.hs  magictrick.hs  maximumcountnegpos.hs  missingnumbers.hs  morsepalindrome.hs  nastyhack.hs  nizovi.hs  oddities.hs  perket.hs  planina.hs  rankproblem.hs  readtwonums.hs  safehouses.hs  secretsanta.hs  shadesofpink.hs  skruop.hs  util.hs  wizardofodds.hs  zyxab.hs
haskell/src/dist-newstyle/cache/: compiler
(+148 files in other folders)
