cabal-version:      3.0
name:               haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Kristian Sørdal
maintainer:         krisor99@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -fno-warn-missing-signatures

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      vector,
                      containers,
                      extra,
                      regex-compat,
                      regex-posix,
                      MorseCode,
                      combinatorial
    hs-source-dirs:   src
    default-language: Haskell2010
